fix clear and done buttons on mobile

--- a/static/css/desktop.less
+++ b/static/css/desktop.less
@@ -53,7 +53,9 @@
       }
     }
 
-    .actions { line-height: 80px; height: 80px; }
+    .actions { line-height: 80px; height: 80px;
+    		#view_results_button { margin:0;}
+    		 }
 
     #bubble_mobile { display: none; }
 }
