--- a/static/css/mobile.less
+++ b/static/css/mobile.less
@@ -44,7 +44,7 @@ button {
 
     .logo-container { background-color: #ccc;
 
-        .logo { height: 70px; line-height: 70px; width: 200px; float:left; position: relative;
+        .logo { height: 75px; line-height: 70px; width: 200px; float:left; position: relative;
 
             .at2x('/static/img/spacescout_mobile_new.png', 189px, 42px);
             background-repeat: no-repeat;
@@ -83,10 +83,11 @@ button {
         }
     }
 
-    .actions { width: auto; float: right; text-align: right; height: 50px; line-height: 50px; margin-right: 10px;
+    .actions { width: auto; float: right; text-align: right; height: 50px;  margin: 5px 10px 5px 0;
 
-        #filter_button { background:#514d83 url('/static/img/down.png') no-repeat 8px 50%; display:inline-block; color: #8987ab; width: 30px; text-indent: -999px; }
-        #view_results_button { background:#514d83 url('/static/img/check.png') no-repeat 10px 50%; display: none; color: #8987ab; width: 30px; text-indent: -999px; }
+        #filter_button { background:#514d83 url('/static/img/down.png') no-repeat 8px 50%; display:inline-block; color: #8987ab; width: 30px; text-indent: -999px;  }
+        #done-clear-group { display:none;}
+        #view_results_button { background:#514d83 url('/static/img/check.png') no-repeat 10px 50%; display: none; color: #8987ab; width: 30px; text-indent: -999px;  margin-bottom: 5px;}
         #cancel_results_button { background: #e4e4e4 url('/static/img/cross.png') no-repeat 10px 50%; display: none; color: #646464; width: 30px; text-indent: -999px; }
 
         #back_home_button { background:#514d83 url('/static/img/left.png') no-repeat 8px 50%; display:inline-block; color: #8987ab; width: 30px; text-indent: -999px; }
@@ -96,7 +97,32 @@ button {
 
 #filter_container { position: relative; margin: 0 10px 11px 10px;
 
+
     #filter_block { display:none; background-color:#222; color: @grey_medium; overflow-y: auto; -webkit-overflow-scrolling: touch;
+    .bubble-inner { background-color:#fff; border: solid 1px @grey_border;
+
+      //  .bubble-tab { width:15px; background: transparent url('/static/img/tri-up.png') no-repeat; position:absolute; top: -7px; right: 15px; text-indent: -9999px; }
+        .bubble-filters { width: 90%; background: #fff url('/static/img/spinner.gif') no-repeat 50% 50%; background-size: 15px;
+            ul { list-style: none; margin: 0; margin-left: 4px; margin-top: 4px; height: 28px; overflow: hidden; background-color: #fff;
+                li { display: inline-block; background-color: #eee; padding: 2px 5px; margin-bottom: 4px; font-size: 11px; }
+            }
+        }
+        .bubble-info { width: 50px; height:32px; background: #e5e5e5 url('/static/img/spinner.gif') no-repeat 50% 50%; background-size: 15px;
+            .count { display: block; padding: 4px; text-align: center; font-weight: bold; color: @purple_text; font-size: 20px; margin-top: 1px; background-color: #e5e5e5; }
+            .spaces { display: block; text-align: center; font-size: 11px; text-transform: uppercase; color: @grey_light; background-color: #e5e5e5; }
+        }
+    }
+
+    .actions { width: auto; float: right; text-align: right; height: 50px; line-height: 50px; margin-right: 10px;
+
+        #filter_button { background:#514d83 url('/static/img/down.png') no-repeat 8px 50%; display:inline-block; color: #8987ab; width: 30px; text-indent: -999px; }
+        #view_results_button { background:#514d83 url('/static/img/check.png') no-repeat 10px 50%; display: none; color: #8987ab; width: 30px; text-indent: -999px; }
+        #cancel_results_button { background: #e4e4e4 url('/static/img/cross.png') no-repeat 10px 50%; display: none; color: #646464; width: 30px; text-indent: -999px; }
+
+        #back_home_button { background:#514d83 url('/static/img/left.png') no-repeat 8px 50%; display:inline-block; color: #8987ab; width: 30px; text-indent: -999px; }
+    }
+    #bubble_mobile {  margin: -5px 0px 5px 0px; }
+
 
         .inner { padding: 15px; }
 
